# shell_gpt

./: .dockerignore  .gitignore  .inst_memory.json  .shell_gpt.sh  CONTRIBUITNG.md  CONTRIBUTING.md  Dockerfile  Dockerfile_ollama  LICENSE  MCP_TESTING.md  README.md  TESTS.md  install.sh  integrational_tests.py  local.py  makefile  pre-push.sh  pyproject.toml  pyvenv.cfg  remove_config.sh  requirements.txt  requirements_dev.txt  school_instructions.txt  setup.py  sgpt.py  shell_gpt.sh  simple_bash.sh  simple_zsh.sh  temp.py  test-search.json  test_sgpt.sh  tests.py  unittests.py  update_package.sh  utils.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  docker.yml  lint.yml  lint_test.yml  main.yml  release.yml
code_synthesis/: favanimal.txt  favanimal_v2.txt  hard.txt  notes.txt  schooldirectory.txt  schooldirectory_v2.txt
demos/: .test.sh.un~  studentdirectory.sh  test.sh
example_scripts/: education_level.py  research_dir.py
examples/: azure_openai_example.py
prompts/: fact_retrieval_v1.txt  instruction_generation.txt  instruction_generation_v1.txt  instruction_generation_v2.txt
reference/aws/: snippet.txt
reference/rio/: snippet.txt
reference/stac/: client-snippet.txt  collection.json  l8st_items.json  landsat.json  sentinel.json  sentinel_items.json
scripts/: format.sh  lint.sh  sgpt_setup.zsh  test.sh  test_gemini_2_5_pro.py  validate_vertexai_models.zsh
sgpt/: __init__.py  __main__.py  app.py  cache.py  chat_gpt.py  client.py  command.py  config.py  function.py  integration.py  make_prompt.py  make_satgpt_role.py  mcp_client.py  printer.py  role.py  sgpt.py  terminal_functions.py  utils.py  version.py
sgpt-chart/: Chart.yaml  values.yaml
sgpt-chart/templates/: NOTES.txt  _helpers.tpl  clusterrolebinding.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
sgpt-chart/templates/tests/: test-connection.yaml
sgpt/completions/: _sgpt
sgpt/default_functions/mac/: apple_script.py
sgpt/handlers/: chat_handler.py  default_handler.py  gemini_handler.py  handler.py  multiscript_handler.py  repl_handler.py
sgpt/llm_functions/: init_functions.py
sgpt/llm_functions/common/: execute_shell.py  internet_search.py
sgpt/llm_functions/mac/: apple_script.py
shell_integration/: README.md  bash.sh  install.sh  zsh.sh
tests/: __init__.py  _integration.py  conftest.py  integration_tests.py  integrational_tests.py  test_azure_openai.py  test_chat_session.py  test_code.py  test_config.py  test_default.py  test_functions.py  test_integration.py  test_mcp.py  test_minimax.py  test_minimax_integration.py  test_mocked.py  test_raw.py  test_roles.py  test_shell.py  test_unit.py  unittests.py  utils.py
utils/: hugging_face.py  memory.py  prompt_functions.py  terminal_functions.py
